Mise en place de different composant!
Debut de la relation front/back requete post signUp check, probleme avec login a resoudre !!!

--- a/frontend/groupomania/src/app/components/header/header.component.scss
+++ b/frontend/groupomania/src/app/components/header/header.component.scss
@@ -1,11 +1,10 @@
 header {
   background: radial-gradient(
     circle,
-    rgba(253, 45, 1, 1) 54%,
-    rgba(255, 215, 215, 1) 91%
+    rgba(253, 45, 1, 0.8422273781902552) 54%,
+    rgba(255, 215, 215, 0.8306264501160092) 91%
   );
-
-  margin-bottom: 1.5rem;
+  margin-bottom: 5rem;
   padding: 10px 0 10px 0;
   height: 10rem;
   width: auto;
