--- a/frontend/groupomania/src/app/components/footer/footer.component.scss
+++ b/frontend/groupomania/src/app/components/footer/footer.component.scss
@@ -1,11 +1,12 @@
 footer {
   margin-top: 5rem;
+  margin-bottom: auto;
   height: 10rem;
   width: 100%;
   background: radial-gradient(
     circle,
-    rgba(253, 45, 1, 1) 54%,
-    rgba(255, 215, 215, 1) 91%
+    rgba(253, 45, 1, 0.8422273781902552) 54%,
+    rgba(255, 215, 215, 0.8306264501160092) 91%
   );
 }
 
