--- a/frontend/groupomania/src/app/pages/landing-connexion/landing-connexion.component.html
+++ b/frontend/groupomania/src/app/pages/landing-connexion/landing-connexion.component.html
@@ -10,12 +10,13 @@
       <mat-card-title>Êtes-vous déjà inscrit ? </mat-card-title>
       <!-- <a href="#">Connectez-vous !!</a> -->
       <button
+        #loginbutton
         mat-flat-button
         [@btnAnimation]="btnAnimationState"
         (mouseenter)="onBtnMouseEnter()"
         (mouseleave)="onBtnMouseLeave()"
-        (click)="goToLogin()"
       >
+        <!-- Dernier retour en arriere -->
         Connectez-vous !
       </button>
     </mat-card>
