--- a/frontend/groupomania/src/app/pages/landing-connexion/landing-connexion.component.html
+++ b/frontend/groupomania/src/app/pages/landing-connexion/landing-connexion.component.html
@@ -15,6 +15,7 @@
         [@btnAnimation]="btnAnimationState"
         (mouseenter)="onBtnMouseEnter()"
         (mouseleave)="onBtnMouseLeave()"
+        (click)="goToLogin()"
       >
         <!-- Dernier retour en arriere -->
         Connectez-vous !
