--- a/frontend/groupomania/src/app/pages/landing-connexion/components/login/login.component.scss
+++ b/frontend/groupomania/src/app/pages/landing-connexion/components/login/login.component.scss
@@ -1,3 +1,5 @@
+@import "~../../../../../../../Scss/_variables";
+@import "~../../../../../../../Scss/_mixins";
 .mainContainer {
   display: flex;
   flex-direction: column;
@@ -6,8 +8,7 @@
   padding-bottom: 1.5rem;
   width: 50%;
   height: 80%;
-  margin-left: auto;
-  margin-right: auto;
+  @include center-item;
   background: linear-gradient(
     8deg,
     rgba(255, 215, 215, 0.6458333333333333) 0%,
@@ -22,12 +23,11 @@
   justify-content: space-evenly;
   width: 70%;
   height: 60%;
-  margin-left: auto;
-  margin-right: auto;
+  @include center-item;
   .mat-card-title {
     text-align: center;
     margin: 0.5rem 0 0.5rem 0;
-    color: #4e5166;
+    color: $tertiary-color;
     font-weight: bold;
   }
 }
@@ -42,6 +42,7 @@
     background: #4e5166;
     width: 50%;
     height: 100%;
+    cursor: pointer;
   }
   :hover {
     // background-color: rgba(255, 215, 215, 1);
@@ -52,13 +53,12 @@
 
 .option {
   width: auto;
-  margin-left: auto;
-  margin-right: auto;
+  @include center-item;
   text-align: center;
   font-size: 1.3rem;
   font-weight: bold;
   p {
-    color: #4e5166;
+    color: $tertiary-color;
   }
 
   a {
@@ -69,15 +69,14 @@
 }
 
 .mat-spinner {
-  margin-left: auto;
-  margin-right: auto;
+  @include center-item;
 }
 
 @keyframes scale-button {
   0% {
     transform: scale(1);
     color: white;
-    background: #4e5166;
+    background: $tertiary-color;
   }
   50% {
     transform: scale(1.1);
@@ -87,6 +86,6 @@
   100% {
     scale: (1);
     color: white;
-    background: #4e5166;
+    background: $tertiary-color;
   }
 }
