--- a/frontend/groupomania/src/styles.scss
+++ b/frontend/groupomania/src/styles.scss
@@ -1,23 +1,26 @@
-/* You can add global styles to this file, and also import other style files */
+// /* You can add global styles to this file, and also import other style files */
 
-html,
-body {
-  height: 100%;
-  font-family: "Lato", sans-serif;
-}
-body {
-  margin: 0;
+// html,
+// body {
+//   height: 100%;
+//   font-family: "Lato", sans-serif;
+// }
+// * {
+//   font-family: "Lato", sans-serif;
+// }
+// body {
+//   margin: 0;
 
-  background-image: url("./assets/images/network-1911678_960_720.png");
-  // background: linear-gradient(
-  //   90deg,
-  //   rgba(255, 215, 215, 1) 0%,
-  //   rgba(253, 45, 1, 1) 20%,
-  //   rgba(253, 62, 22, 0.8356481481481481) 50%,
-  //   rgba(253, 76, 39, 1) 80%,
-  //   rgba(255, 215, 215, 1) 100%
-  // );
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
+//   background-image: url("./assets/images/network-1911678_960_720.png");
+//   // background: linear-gradient(
+//   //   90deg,
+//   //   rgba(255, 215, 215, 1) 0%,
+//   //   rgba(253, 45, 1, 1) 20%,
+//   //   rgba(253, 62, 22, 0.8356481481481481) 50%,
+//   //   rgba(253, 76, 39, 1) 80%,
+//   //   rgba(255, 215, 215, 1) 100%
+//   // );
+//   background-repeat: no-repeat;
+//   background-size: cover;
+//   background-attachment: fixed;
+// }
