Ajout des donnée user dans les posts + button new post

--- a/frontend/groupomania/src/app/components/header/header.component.html
+++ b/frontend/groupomania/src/app/components/header/header.component.html
@@ -6,5 +6,7 @@
     />
   </div>
   <h1>Votre réseaux social d'entreprise</h1>
-  <button (click)="onLogout()" *ngIf="isAuth$ | async">Déconnexion</button>
+  <div class="center-button">
+    <button (click)="onLogout()" *ngIf="isAuth$ | async">Déconnexion</button>
+  </div>
 </header>
