--- a/frontend/groupomania/src/app/pages/posts/components/post-list/post-list.component.html
+++ b/frontend/groupomania/src/app/pages/posts/components/post-list/post-list.component.html
@@ -1,1 +1,3 @@
+<div class="newPostButton"><button>Nouveau post</button></div>
+
 <app-post *ngFor="let post of posts$ | async" [post]="post"></app-post>
