--- a/frontend/groupomania/src/Scss/_mixins.scss
+++ b/frontend/groupomania/src/Scss/_mixins.scss
@@ -32,3 +32,8 @@
   justify-content: space-between;
   align-items: center;
 }
+
+@mixin center-flex {
+  display: flex;
+  justify-content: center;
+}
