--- a/frontend/groupomania/src/Scss/styles.scss
+++ b/frontend/groupomania/src/Scss/styles.scss
@@ -1,5 +1,6 @@
 @import "./variables";
 @import "./mixins";
+@import "./placeholder";
 
 /* You can add global styles to this file, and also import other style files */
 
