--- a/frontend/groupomania/src/app/pages/landing-connexion/landing-connexion.component.html
+++ b/frontend/groupomania/src/app/pages/landing-connexion/landing-connexion.component.html
@@ -7,7 +7,7 @@
   />
   <mat-card-content class="container">
     <mat-card class="login">
-      <mat-card-title>Êtes-vous déjà inscrit ? </mat-card-title>
+      <mat-card-subtitle>Êtes-vous déjà inscrit ? </mat-card-subtitle>
       <!-- <a href="#">Connectez-vous !!</a> -->
       <button
         #loginbutton
@@ -22,7 +22,7 @@
       </button>
     </mat-card>
     <mat-card class="signup">
-      <mat-card-title>Pas encore inscrit ? </mat-card-title>
+      <mat-card-subtitle>Pas encore inscrit ? </mat-card-subtitle>
       <!-- <a href="#">Inscrivez-vous !!</a> -->
       <button
         mat-flat-button
