--- a/frontend/groupomania/src/app/components/header/header.component.scss
+++ b/frontend/groupomania/src/app/components/header/header.component.scss
@@ -1,22 +1,34 @@
 @import "../../../Scss/variables";
 @import "../../../Scss/mixins";
+@import "../../../Scss/placeholder";
+
 header {
   background: $background-h-f;
   margin-bottom: 3rem;
   padding: 10px 0 10px 0;
   height: 10rem;
   width: auto;
-  position: relative;
 
   img {
     height: 5rem;
-    width: 50%;
+    width: 25rem;
     text-align: center;
+
+    @include tablet {
+      width: 15rem;
+    }
   }
   h1 {
     font-size: 1.8rem;
     width: auto;
     text-align: center;
+
+    @include tablet {
+      font-size: 1.3rem;
+    }
+    @include mobile {
+      font-size: 1rem;
+    }
   }
 }
 
@@ -25,7 +37,7 @@ header {
 }
 
 .center-button {
-  @include center-flex;
+  @extend %center-flex;
 }
 button {
   width: 7rem;
