--- a/frontend/groupomania/src/app/pages/landing-connexion/landing-connexion.component.scss
+++ b/frontend/groupomania/src/app/pages/landing-connexion/landing-connexion.component.scss
@@ -1,18 +1,19 @@
 @import "../../../Scss/mixins";
 @import "../../../Scss/variables";
+@import "../../../Scss/placeholder";
 
 .primaryContainer {
-  @include column-space-evenly;
-  margin-top: 12.5rem;
+  @extend %column-space-evenly;
+
   width: 50%;
-  height: 50%;
-  @include center-item;
-  // background-color: #ffd7d7;
+  height: 35rem;
+  @extend %center-item;
+
   background: $background-connexion;
 }
 
 .container {
-  @include column-space-evenly;
+  @extend %column-space-evenly;
   height: 70%;
   background: linear-gradient(
     8deg,
@@ -22,6 +23,13 @@
 }
 .centerTitle {
   font-size: 2rem;
+
+  @include tablet {
+    font-size: 1.3rem;
+  }
+  @include mobile {
+    font-size: 1.5rem;
+  }
 }
 mat-card-title {
   text-align: center;
@@ -33,23 +41,42 @@ img {
 .signup {
   height: 25%;
   text-align: center;
-  @include column-space-evenly;
+  @extend %column-space-evenly;
   align-items: center;
 
   background: #fcf4f4;
 }
 
 mat-card-subtitle {
-  font-size: 1rem;
+  font-size: 1.8rem;
+  color: $tertiary-color;
+  width: 25rem;
+
+  @include tablet {
+    font-size: 1.3rem;
+    width: 15rem;
+  }
+
+  @include mobile {
+    font-size: 0.9rem;
+  }
 }
 button {
-  font-size: 1.3rem;
+  font-size: 1.8rem;
   padding: 0;
   line-height: 40px;
   flex-shrink: 0;
   padding: 0 10px 0 10px;
   color: white;
   background: $background-light-blue;
+
+  @include tablet {
+    font-size: 1.3rem;
+  }
+
+  @include mobile {
+    font-size: 0.9rem;
+  }
 }
 
 //Media querys a prevoir pour réajuster la taille du composant
