--- a/frontend/groupomania/src/app/pages/landing-connexion/components/login/login.component.scss
+++ b/frontend/groupomania/src/app/pages/landing-connexion/components/login/login.component.scss
@@ -7,7 +7,7 @@
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
   width: 50%;
-  height: 80%;
+  height: 35rem;
   background: $background-connexion;
 }
 
@@ -21,12 +21,16 @@
     margin: 0.5rem 0 0.5rem 0;
     color: $tertiary-color;
     font-weight: bold;
+    font-size: 1.8rem;
+
+    @include mobile {
+      font-size: 1.3rem;
+    }
   }
 }
 
 .mat-card-actions {
   text-align: center;
-
   height: 3rem;
 
   button {
@@ -35,6 +39,19 @@
     width: 50%;
     height: 100%;
     cursor: pointer;
+    font-size: 1.8rem;
+
+    @include laptop {
+      font-size: 1.5rem;
+    }
+
+    @include tablet {
+      width: 10rem;
+    }
+    @include mobile {
+      width: 7rem;
+      font-size: 0.9rem;
+    }
   }
   :hover {
     // background-color: rgba(255, 215, 215, 1);
@@ -47,8 +64,15 @@
   width: auto;
   @extend %center-item;
   text-align: center;
-  font-size: 1.3rem;
+  font-size: 1.8rem;
   font-weight: bold;
+
+  @include tablet {
+    font-size: 1.5rem;
+  }
+  @include mobile {
+    font-size: 1.2rem;
+  }
   p {
     color: $tertiary-color;
   }
