Mise en place MQ

--- a/frontend/groupomania/src/app/pages/landing-connexion/components/sign-up/sign-up.component.html
+++ b/frontend/groupomania/src/app/pages/landing-connexion/components/sign-up/sign-up.component.html
@@ -1,7 +1,7 @@
 <div class="mainContainer">
   <mat-card class="signupForm" [formGroup]="mainForm">
     <mat-card-title>Inscription</mat-card-title>
-    <mat-card class="form-card">
+    <mat-card class="form-card center-mobile">
       <mat-card-subtitle>Prénom / Pseudonyme</mat-card-subtitle>
 
       <mat-form-field appearance="fill">
