Mise a jour du auth-guard(pas optimal)
Ajout du plus recent au plus vieux au page des posts
Possibilite d'ajouter un post depuis le front

--- a/frontend/groupomania/src/app/pages/posts/components/new-post/new-post.component.html
+++ b/frontend/groupomania/src/app/pages/posts/components/new-post/new-post.component.html
@@ -28,7 +28,6 @@
       accept="image/*"
       #imageInput
       (change)="onFileAdded($event)"
-      formControlName="imageUrl"
     />
     <button
       mat-raised-button
@@ -42,6 +41,7 @@
   </mat-card>
   <mat-card-actions>
     <button
+      class="submit-button"
       mat-raised-button
       color="warn"
       aria-label="Publier"
