--- a/frontend/groupomania/src/app/pages/posts/components/post-list/post-list.component.html
+++ b/frontend/groupomania/src/app/pages/posts/components/post-list/post-list.component.html
@@ -1,5 +1,9 @@
 <div class="newPostButton">
   <button (click)="onClickNewPost()">Nouveau post</button>
 </div>
-
-<app-post *ngFor="let post of posts$ | async" [post]="post"></app-post>
+<!-- V1 -->
+<!-- <app-post *ngFor="let post of posts$ | async" [post]="post"></app-post> -->
+<!-- Test -->
+<div *ngIf="posts$ | async as posts">
+  <app-post *ngFor="let post of posts.reverse()" [post]="post"></app-post>
+</div>
