--- a/frontend/groupomania/src/app/pages/posts/components/post-item/post.component.scss
+++ b/frontend/groupomania/src/app/pages/posts/components/post-item/post.component.scss
@@ -8,10 +8,13 @@
   border-radius: 25px;
   width: 70%;
   // height: 80%;
-  height: 50rem;
+  height: 75rem;
   margin: 50px auto;
   background: $background-connexion;
   padding: 5px;
+  @include laptop {
+    height: 50rem;
+  }
 }
 
 .createInfo {
@@ -46,8 +49,14 @@
 img {
   margin-top: 5px;
   width: 100%;
-  height: 60%;
-  object-fit: cover;
+  height: 80%;
+  object-fit: contain;
+  @include laptop {
+    height: 60%;
+  }
+  @include mobile {
+    object-fit: cover;
+  }
 }
 
 .containerDescription {
