Mise en place des fonction Delete, like
Probleme avec la mise en place de la fonction Modify (back et front)

--- a/frontend/groupomania/src/Scss/_variables.scss
+++ b/frontend/groupomania/src/Scss/_variables.scss
@@ -10,6 +10,13 @@ $background-connexion: linear-gradient(
   rgba(255, 215, 215, 0.8912037037037037) 50%,
   rgba(255, 215, 215, 1) 100%
 );
+
+$background-post: linear-gradient(
+  8deg,
+  rgba(255, 215, 215, 0.8912037037037037) 0%,
+  rgba(255, 215, 215, 1) 100%
+);
+
 $background-h-f: radial-gradient(
   circle,
   rgba(253, 45, 1, 0.8422273781902552) 54%,
