--- a/frontend/groupomania/src/app/components/header/header.component.html
+++ b/frontend/groupomania/src/app/components/header/header.component.html
@@ -7,6 +7,8 @@
   </div>
   <h1>Votre réseaux social d'entreprise</h1>
   <div class="center-button">
-    <button (click)="onLogout()" *ngIf="isAuth$ | async">Déconnexion</button>
+    <button mat-raised-button (click)="onLogout()" *ngIf="isAuth$ | async">
+      Déconnexion
+    </button>
   </div>
 </header>
