--- a/frontend/groupomania/src/app/pages/posts/components/post-list/post-list.component.html
+++ b/frontend/groupomania/src/app/pages/posts/components/post-list/post-list.component.html
@@ -1,5 +1,5 @@
 <div class="newPostButton">
-  <button (click)="onClickNewPost()">Nouveau post</button>
+  <button (click)="onClickNewPost()" mat-raised-button>Nouveau post</button>
 </div>
 <!-- V1 -->
 <!-- <app-post *ngFor="let post of posts$ | async" [post]="post"></app-post> -->
