--- a/frontend/groupomania/src/app/pages/posts/components/post-list/post-list.component.scss
+++ b/frontend/groupomania/src/app/pages/posts/components/post-list/post-list.component.scss
@@ -1,10 +1,12 @@
 @import "../../../../../Scss/mixins";
 @import "../../../../../Scss/placeholder";
+@import " ../../../../../../../Scss/variables";
 
 .newPostButton {
   @extend %center-flex;
   button {
-    width: 7rem;
-    height: 2rem;
+    background-color: $tertiary-color;
+    color: white;
+    font-size: 1.5rem;
   }
 }
