Enlevement du code superflue
Rajout commentaire adaptation spinner login/signup/post

--- a/frontend/groupomania/src/app/pages/landing-connexion/components/login/login.component.html
+++ b/frontend/groupomania/src/app/pages/landing-connexion/components/login/login.component.html
@@ -31,8 +31,7 @@
         Connexion
       </button>
     </mat-card-actions>
-
-    <mat-spinner *ngIf="loading" mode="indeterminate"></mat-spinner>
+    <mat-spinner *ngIf="loading" color="warn"></mat-spinner>
   </mat-card>
   <div class="option">
     <p>Vous n'avez pas de compte ?</p>
