--- a/frontend/groupomania/src/app/pages/landing-connexion/components/sign-up/sign-up.component.html
+++ b/frontend/groupomania/src/app/pages/landing-connexion/components/sign-up/sign-up.component.html
@@ -69,7 +69,7 @@
         Inscription
       </button>
     </mat-card-actions>
-    <mat-spinner *ngIf="loading"></mat-spinner>
+    <mat-spinner *ngIf="loading" color="warn"></mat-spinner>
     <div class="option">
       <p>Vous avez déjà un compte ?</p>
       <a href="#" routerLink="/login">Connectez-vous</a>
