--- a/frontend/groupomania/src/app/pages/posts/components/new-post/new-post.component.html
+++ b/frontend/groupomania/src/app/pages/posts/components/new-post/new-post.component.html
@@ -50,5 +50,5 @@
       Envoyer
     </button>
   </mat-card-actions>
-  <mat-spinner *ngIf="loading"></mat-spinner>
+  <mat-spinner *ngIf="loading" color="warn"></mat-spinner>
 </mat-card>
