--- a/frontend/groupomania/src/app/pages/landing-connexion/components/login/login.component.scss
+++ b/frontend/groupomania/src/app/pages/landing-connexion/components/login/login.component.scss
@@ -56,7 +56,7 @@
   :hover {
     // background-color: rgba(255, 215, 215, 1);
     // color: black;
-    animation: scale-button 1.5s ease-out 0.4s infinite normal none;
+    animation: scale-button 1.5s linear 0.4s;
   }
 }
 
@@ -100,8 +100,6 @@
     color: black;
   }
   100% {
-    scale: (1);
-    color: white;
-    background: $tertiary-color;
+    transform: scale(1);
   }
 }
