--- a/frontend/groupomania/src/app/pages/posts/components/post-item/post.component.scss
+++ b/frontend/groupomania/src/app/pages/posts/components/post-item/post.component.scss
@@ -82,7 +82,7 @@ img {
 
     cursor: pointer;
     &:hover {
-      color: rgb(51, 219, 0, 1);
+      color: rgb(41, 145, 9);
     }
   }
 
@@ -93,7 +93,7 @@ img {
 }
 
 .liked {
-  color: rgb(51, 219, 0, 1);
+  color: rgb(41, 145, 9);
 }
 
 .buttons {
