Ajustement des commentaires
et enlevement code superflue

--- a/frontend/groupomania/src/app/pages/landing-connexion/components/sign-up/sign-up.component.html
+++ b/frontend/groupomania/src/app/pages/landing-connexion/components/sign-up/sign-up.component.html
@@ -10,6 +10,7 @@
         <mat-error>Ce champ est requis</mat-error>
       </mat-form-field>
     </mat-card>
+    <!-- Formulaire Email -->
     <mat-card class="form-card" [formGroup]="emailForm">
       <mat-card-subtitle>Adresse email</mat-card-subtitle>
       <div class="form-row">
@@ -38,6 +39,7 @@
         >Les deux adresses ne correspondent pas</small
       >
     </mat-card>
+    <!-- Formulaire Password -->
     <mat-card class="form-card password-card" [formGroup]="passwordForm">
       <mat-card-subtitle>Mots de passe</mat-card-subtitle>
       <div class="form-row">
