--- a/frontend/groupomania/src/app/pages/landing-connexion/components/login/login.component.html
+++ b/frontend/groupomania/src/app/pages/landing-connexion/components/login/login.component.html
@@ -15,7 +15,7 @@
       <mat-label>Mot de passe</mat-label>
       <input
         type="password"
-        placeholder="Just a test"
+        placeholder="Azerty14"
         matInput
         formControlName="password"
       />
