--- a/frontend/groupomania/src/app/pages/posts/components/new-post/new-post.component.html
+++ b/frontend/groupomania/src/app/pages/posts/components/new-post/new-post.component.html
@@ -52,3 +52,5 @@
   </mat-card-actions>
   <mat-spinner *ngIf="loading" color="warn"></mat-spinner>
 </mat-card>
+
+<!-- Code enlever au niveau du bouton : [disabled]="postForm.invalid" -->
