--- a/frontend/groupomania/src/app/pages/posts/components/post-item/post.component.html
+++ b/frontend/groupomania/src/app/pages/posts/components/post-item/post.component.html
@@ -28,10 +28,24 @@
       </div>
 
       <div class="actionButtons">
-        <button mat-raised-button *ngIf="disableButton" (click)="onModify()">
+        <button
+          class="modifiedButton"
+          *ngIf="disableButton"
+          (click)="onModify()"
+          [@modifyButtonHover]="modifyButtonState"
+          (mouseenter)="onModifyButtonHover()"
+          (mouseleave)="onModifyButtonLeave()"
+        >
           Modifier
         </button>
-        <button mat-raised-button *ngIf="disableButton" (click)="onDelete()">
+        <button
+          class="deleteButton"
+          *ngIf="disableButton"
+          (click)="onDelete()"
+          [@deleteButtonHover]="deleteButtonState"
+          (mouseenter)="onDeleteButtonHover()"
+          (mouseleave)="onDeleteButtonLeave()"
+        >
           Supprimer
         </button>
       </div>
